2010-06-16  Adam Barth  <abarth@webkit.org>

Reviewed by Eric Seidel.

        Hit assertion in WebCore::HTML5Token::appendToSystemIdentifier
        https://bugs.webkit.org/show_bug.cgi?id=40729

        This was a copy/paste error.  Yay for ASSERTs.

        * html/HTML5Lexer.cpp:
        (WebCore::HTML5Lexer::nextToken):
2010-06-16  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        Hit assertion in WebCore::HTML5Token::appendToSystemIdentifier
        https://bugs.webkit.org/show_bug.cgi?id=40729

        Add more test coverage of DOCTYPE parsing states.  Turns out you use a
        different state if there's no whitespace between the public and system
        identifiers.

        * html5lib/resources/doctype01.dat:


Canonical link: https://commits.webkit.org/52290@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@61280 268f45cc-cd09-0410-ab3c-d52691b4dbfc